test: Expand test suite from 99 to 203 tests; fix stdlib bugs
New test files:
- StdlibTest.java (51 tests): full coverage of core, collections, math,
  string, and testing stdlib modules
- MoreEvaluatorTest.java (53 tests): JSON builtins, module system (import/
  from/as), control flow (continue, nested break), dict index assignment,
  closures, error propagation, string interpolation, and structs

Bug fixes uncovered by tests:
- Evaluator: dict index assignment (d["key"] = val) was rejected as
  "requires array[int]" — extended assignTarget to support Dict
- stdlib/string.ae reverse(): off-by-one, dropped first and last chars
- stdlib/string.ae starts_with(): wrong +1 index offset (assumed empty
  string at head of split result)
- stdlib/string.ae ends_with(): same wrong index offset

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>